attendance and participation

--- a/POSC 315 Intro Policy/2025-26 Fall/posc315_2025_fall.tex
+++ b/POSC 315 Intro Policy/2025-26 Fall/posc315_2025_fall.tex
@@ -180,9 +180,12 @@ If you encounter any technical difficulties, contact the instructor immediately 
 % Part a: Grading Scale
 \noindent \textbf{a. Grading scale:}
 
+The grading scale for this course is outlined in Table~\ref{tab:grade-scale}. Letter grades correspond to the percentage ranges shown. Note that grades are not rounded up.
+
 \begin{center}
 \begin{table}[h]
   \caption{Grade scale}
+  \label{tab:grade-scale}
   \centering
   \begin{tblr}{
     colspec = {l c l c},
@@ -205,9 +208,12 @@ If you encounter any technical difficulties, contact the instructor immediately 
 \vspace{1em}
 \noindent \textbf{b. Required Course Assignments:}
 
+The breakdown of required course assignments and their respective weightings is provided in Table~\ref{tab:assignment-weighting}. These assignments are designed to assess your understanding of the course material and your ability to apply it effectively.
+
 \begin{center}
 \begin{table}[h]
   \caption{Assignment weighting}
+  \label{tab:assignment-weighting}
   \centering
   \begin{tblr}{
     colspec = {l c},
@@ -222,11 +228,13 @@ If you encounter any technical difficulties, contact the instructor immediately 
   \quad Literature Review              & \quad 15\% \\
   \quad Draft Analysis                 & \quad 15\% \\
   \quad Final Paper                    & \quad 15\% \\
-  Discussion Participation             & 15\% \\
+  Discussion Participation             & 10\% \\
+  Attendance and Participation         & 5\%  \\
   Total                               & 100\% \\
   \end{tblr}
 \end{table}
 \end{center}
+
 
 \noindent \textbf{Module Quizzes (25\% of Final Grade):} Each module includes a quiz following the video content to assess understanding of key concepts. Quizzes consist of 10--20 multiple-choice questions and must be completed by Sunday at 11:59 p.m. of each week. Lowest quiz score dropped.
 
@@ -244,11 +252,11 @@ If you encounter any technical difficulties, contact the instructor immediately 
 \textit{Note: Each assignment grade includes both your submission quality and peer review participation via Kritik. Missing peer reviews will significantly impact that assignment's grade.}
 
 \vspace{0.5em}
-\noindent \textbf{Discussion Participation (15\% of Final Grade):} Weekly participation in Canvas discussions and Discord conversations demonstrates engagement with course material and peers. Quality matters more than quantity---thoughtful, substantive contributions that advance the conversation earn full credit.
+\noindent \textbf{Discussion Participation (10\% of Final Grade):} Bi-weekly participation in Canvas discussions and Discord conversations demonstrates engagement with course material and peers. Quality matters more than quantity---thoughtful, substantive contributions that advance the conversation earn full credit.
 
 % Part c: Attendance and Participation
 \vspace{1em}
-\noindent \textbf{c. Attendance and Participation policy:}
+\noindent \textbf{c. Attendance and Participation policy (5\% of Final Grade):}
 As an asynchronous online course, ``attendance'' means regular engagement with course materials, timely submission of assignments, and active participation in discussions and peer reviews. Students should log into Canvas at least 3--4 times per week and complete all module activities by the weekly deadlines. Consistent engagement is essential for success in the scaffolded paper project.
 
 % Part d: Examination dates
