style a bit and move why it matters to end

--- a/POSC 315 Intro Policy/2025-26 Fall/posc315_2025_fall.tex
+++ b/POSC 315 Intro Policy/2025-26 Fall/posc315_2025_fall.tex
@@ -92,7 +92,7 @@
 \urlstyle{same}                   % Use the same font style for URLs
 
 % Document title and metadata
-\title{POSC 315, \textit{Introduction to Public Policy}} % Course title
+\title{\textbf{POSC 315} \\ \textsc{Introduction to Public Policy}} % Course title
 \author{}                         % Leave author blank (info in body)
 \date{Fall 2025}                  % Term and year of the course
 
@@ -104,21 +104,22 @@
 
 \maketitle
 
+\begin{center}
+    \includegraphics[width=2.75in, alt={Cal State Fullerton wordmark}]{csuf_logo.png}
+\end{center}
+
+
 % ========== SECTION 1: FACULTY INFORMATION ==========
 \section{Faculty Information}
+% Replace placeholders with your information
 \noindent \textbf{Instructor:} David P. Adams, Ph.D. \\
-\noindent \textbf{Office:} Gordon Hall 516 \\
-\noindent \textbf{Phone:} (657) 278-4770 \\
-\noindent \textbf{Email:} dpadams@fullerton.edu \\
+\noindent \textbf{Pronouns:} He/Him \\
+\noindent \textbf{Office:} Gordon Hall 521 \\
+\noindent \textbf{Phone/Text:} (657) 278-4770 \\
 \noindent \textbf{Website:} \href{https://dadams.io}{dadams.io} \\
-\noindent \textbf{Discord:} \href{https://discord.gg/yxCXU9yC}{discord.gg/yxCXU9yC} \\
-\noindent \textbf{Office hours:} Mondays 7:00--8:00 p.m. on \href{https://discord.gg/yxCXU9yC}{Discord Office Hours Channel}; Tuesdays at 10:00 - 11:00 a.m. in person; schedule individual in-person or Zoom appointments at \href{https://dadams.io/appointments}{dadams.io/appointments}. 
-
-\section{Why This Course Matters}
-
-We live in an era when deep divisions shape not just our politics but our perceptions of reality itself. Nearly two-thirds of Americans (65\%) say they ``always or often feel exhausted'' by politics (Pew Research Center 2023). Self-identified moderates, once the largest group, have dropped to a record low of just 34\% (Gallup 2024). Meanwhile, unfavorable views of the opposing party have more than doubled since the 1990s, reaching record highs of “very unfavorable” sentiment (Pew Research Center; Gallup). James Madison warned in Federalist 10 of the “violence of faction,” and Montesquieu's vision of checks and balances was meant to prevent any single group from dominating. Yet today, partisan animosity runs so deep that many Americans see political opponents not merely as wrong, but as a threat to the republic itself. Alexis de Tocqueville once marveled at Americans' capacity to build associations and bridge differences—a civic muscle that now appears strained. And yet, even amid this polarization, the machinery of governance continues to turn: problems still become laws, programs are implemented, and occasionally, genuine solutions emerge from the gridlock.
-
-This course equips you with the analytical tools to see beyond the doom-scrolling and cable news shouting matches. You'll discover that polarization isn't destiny; it's a policy problem that can be understood through frameworks like path dependence and punctuated equilibrium. FDR faced a nation literally coming apart during the Depression, yet managed to fundamentally reshape the relationship between citizens and government through savvy use of policy windows and coalition building. The same processes he mastered---agenda setting, problem definition, policy entrepreneurship---still operate today, just waiting for those who understand them. Through your research project, you'll trace how real policies navigate this polarized landscape, learning to spot the moments when change becomes possible. You'll understand why some issues break through the gridlock while others languish, how policy entrepreneurs exploit crises to push long-dormant solutions, and why implementation often matters more than legislation. This isn't just academic theory; it's a toolkit for citizenship in troubled times. Whether you're headed for public service or simply want to be an informed participant in democracy, this course teaches you to read the hidden grammar of American politics---to see the republic not as hopelessly broken, but as a complex system that citizens who understand it can still influence.
+\noindent \textbf{Email:} dpadams@fullerton.edu \\
+\noindent \textbf{Zoom ID:} 334 750 2639 \\
+\noindent \textbf{Office hours:} Mondays 7:00--8:00 p.m. on \href{https://discord.gg/yxCXU9yC}{Discord Office Hours Channel}; Tuesdays at 10:00--11:00 a.m. in person; schedule individual in-person or Zoom appointments at \href{https://dadams.io/appointments}{dadams.io/appointments}. 
 
 % ========== SECTION 2: COURSE COMMUNICATION ==========
 \section{Course Communication}
@@ -539,5 +540,12 @@ Assignment(s) Due: Module quiz; Final paper preparation\\
 Topic(s): Course Wrap-up and Synthesis\\
 Reading(s): None\\
 Assignment(s) Due: \textbf{Final Policy Process Analysis Paper due Thursday 12/18 at 11:59 PM (submit to Canvas)}\\
+
+\section{Why This Course Matters}
+
+  We live in an era when deep divisions shape not just our politics but our perceptions of reality itself. Nearly two-thirds of Americans (65\%) say they ``always or often feel exhausted'' by politics (Pew Research Center 2023). Self-identified moderates, once the largest group, have dropped to a record low of just 34\% (Gallup 2024). Meanwhile, unfavorable views of the opposing party have more than doubled since the 1990s, reaching record highs of “very unfavorable” sentiment (Pew Research Center; Gallup). James Madison warned in Federalist 10 of the “violence of faction,” and Montesquieu's vision of checks and balances was meant to prevent any single group from dominating. Yet today, partisan animosity runs so deep that many Americans see political opponents not merely as wrong, but as a threat to the republic itself. Alexis de Tocqueville once marveled at Americans' capacity to build associations and bridge differences—a civic muscle that now appears strained. And yet, even amid this polarization, the machinery of governance continues to turn: problems still become laws, programs are implemented, and occasionally, genuine solutions emerge from the gridlock.
+
+  This course equips you with the analytical tools to see beyond the doom-scrolling and cable news shouting matches. You'll discover that polarization isn't destiny; it's a policy problem that can be understood through frameworks like path dependence and punctuated equilibrium. FDR faced a nation literally coming apart during the Depression, yet managed to fundamentally reshape the relationship between citizens and government through savvy use of policy windows and coalition building. The same processes he mastered---agenda setting, problem definition, policy entrepreneurship---still operate today, just waiting for those who understand them. Through your research project, you'll trace how real policies navigate this polarized landscape, learning to spot the moments when change becomes possible. You'll understand why some issues break through the gridlock while others languish, how policy entrepreneurs exploit crises to push long-dormant solutions, and why implementation often matters more than legislation. This isn't just academic theory; it's a toolkit for citizenship in troubled times. Whether you're headed for public service or simply want to be an informed participant in democracy, this course teaches you to read the hidden grammar of American politics---to see the republic not as hopelessly broken, but as a complex system that citizens who understand it can still influence.
+
 
 \end{document}
