--- a/POSC 315 Intro Policy/2025-26 Fall/posc315_2025_fall.tex
+++ b/POSC 315 Intro Policy/2025-26 Fall/posc315_2025_fall.tex
@@ -92,7 +92,7 @@
 \urlstyle{same}                   % Use the same font style for URLs
 
 % Document title and metadata
-\title{\textbf{POSC 315} \\ \textsc{Introduction to Public Policy}} % Course title
+\title{\textbf{POSC 315-50} \\ \textsc{Introduction to Public Policy}} % Course title
 \author{}                         % Leave author blank (info in body)
 \date{Fall 2025}                  % Term and year of the course
 
