kritik for ai detection

--- a/POSC 315 Intro Policy/2025-26 Fall/posc315_2025_fall.tex
+++ b/POSC 315 Intro Policy/2025-26 Fall/posc315_2025_fall.tex
@@ -364,7 +364,7 @@ This policy is designed to ensure AI use strengthens---not substitutes---your ac
 \begin{itemize}
     \item Misuse includes submitting AI-generated work as your own, failing to cite AI contributions, or relying on AI instead of demonstrating your own analysis.
     \item Consequences may include revision requirements, grade penalties, or formal academic integrity proceedings.
-    \item Turnitin's AI detection tools will be used to identify potential misuse.
+    \item Kritik's AI detection tools will be used to identify potential misuse.
 \end{itemize}
 
 % ========== SECTION 7: TECHNICAL COMPETENCIES ==========
