--- a/POSC 315 Intro Policy/2025-26 Fall/posc315_2025_fall.tex
+++ b/POSC 315 Intro Policy/2025-26 Fall/posc315_2025_fall.tex
@@ -60,6 +60,10 @@
 \usepackage{colortbl}
 \usepackage{xcolor}               % Color support
 
+% Section Styling
+\renewcommand{\thesection}{\arabic{section}.}
+\renewcommand{\thesubsection}{\thesection\arabic{subsection}}
+\renewcommand{\thesubsubsection}{\thesubsection.\arabic{subsubsection}}
 
 % Tagging for accessibility
 \IfFileExists{tagpdf-base.sty}{
