--- a/POSC 315 Intro Policy/2025-26 Fall/posc315_2025_fall.tex
+++ b/POSC 315 Intro Policy/2025-26 Fall/posc315_2025_fall.tex
@@ -58,7 +58,9 @@
 \usepackage{tabularray}           % Modern table package
 \UseTblrLibrary{booktabs}         % Use booktabs for better table rules
 \usepackage{colortbl}
-\usepackage{xcolor}               % Color support
+\usepackage{xcolor}    
+
+\frenchspacing% Color support
 
 % Section Styling
 \renewcommand{\thesection}{\arabic{section}.}
@@ -123,7 +125,7 @@
 \noindent \textbf{Website:} \href{https://dadams.io}{dadams.io} \\
 \noindent \textbf{Email:} dpadams@fullerton.edu \\
 \noindent \textbf{Zoom ID:} 334 750 2639 \\
-\noindent \textbf{Office hours:} Mondays 7:00--8:00 p.m. on \href{https://discord.gg/yxCXU9yC}{Discord Office Hours Channel}; Tuesdays at 10:00--11:00 a.m. in person; schedule individual in-person or Zoom appointments at \href{https://dadams.io/appointments}{dadams.io/appointments}. 
+\noindent \textbf{Office hours:} Mondays 7:00--8:00 p.m. on \href{https://discord.com/channels/1128747433636135113/1154048074172354600}{Discord Office Hours Channel}, Tuesdays 5:30--6:30 p.m., and Thursdays 10:00--11:00 a.m. Schedule individual appointments at \href{https://dadams.io/appointments}{dadams.io/appointments}
 
 % ========== SECTION 2: COURSE COMMUNICATION ==========
 \section{Course Communication}
