updated 588. nearly ready for production

--- a/POSC 588 Collab Gov/spring_26/POSC_588_Spring26.tex
+++ b/POSC 588 Collab Gov/spring_26/POSC_588_Spring26.tex
@@ -118,8 +118,8 @@
 \noindent \textbf{Phone/Text:} (657) 278-4770 \\
 \noindent \textbf{Email:} \href{mailto:dpadams@fullerton.edu}{dpadams@fullerton.edu} \\
 \noindent \textbf{Website:} \href{https://dadams.io}{dadams.io} \\
-\noindent \textbf{Office hours:} Tuesdays \& Thursdays from 9:30 to 11:00, Thursdays from 5:30 to 6:30, and by \href{https://dadams.io/appt}{appointment}. \\
-\noindent \textbf{Schedule meetings throughout the week:} \href{https://dadams.io/appt}{dadams.io/appt}
+\noindent \textbf{Office hours:} Mondays and Tuesdays from 11:00--1:00, Mondays from 5:30 to 6:30, and by \href{https://dadams.io/appointments}{appointment}. \\
+\noindent \textbf{Schedule meetings throughout the week:} \href{https://dadams.io/appointments}{dadams.io/appointments}
 
 % ========== SECTION 2: COURSE COMMUNICATION ==========
 \section*{Course Communication}
@@ -145,18 +145,15 @@ If you encounter any technical difficulties, contact the instructor immediately 
 % ========== SECTION 4: COURSE INFORMATION ==========
 \section*{Course Information}
 \noindent \textbf{Prefix, number, title:} POSC 588, \textit{Collaborative Governance} \\
-\noindent \textbf{Meeting times with modality, day(s), time(s), and location (if synchronous):} In-Person, Tuesdays at 7:00 p.m., McCarthy Hall 213
+\noindent \textbf{Meeting times with modality, day(s), time(s), and location:} In-Person, Tuesdays at 7:00 p.m., Gordon Hall 208
 
 \vspace{0.5em}
 \begin{flatlist}
-\item \textbf{Zoom:} none
 \item \textbf{Course requisite(s):} none
 \item \textbf{Catalog description:} This course introduces core topics in collaborative and networked public management, including federalism, intergovernmental relations, public-private partnerships, contracts, interlocal agreements, and network governance.
-\item \textbf{Additional description:} See the Course Description section below.
 \item \textbf{Policy regarding the use of generative AI:} See the \emph{Policy on the Use of Generative AI and Other Technology} section below.
 \item \textbf{Course materials and equipment:} Canvas; access to course readings and course documents
-\item \textbf{Required text(s):} Agranoff (2012); Emerson \& Nabatchi (2015); Henderson (2015); O'Leary \& Bingham (eds.) (2009)
-\item \textbf{Other course materials and equipment:} none
+\item \textbf{Required text(s):} \citet{Agranoff2012}; \citet{EmersonNabatchi2015}; \citet{Henderson2015}; \citet{OLeary2009}
 \end{flatlist}
 
 \section*{Course Description}
@@ -226,8 +223,8 @@ It is the student's responsibility to read and understand the required and impor
 \subsection*{Course Format: Flipped and Studio}
 This course follows a flipped-classroom-and-studio format. Class meetings are 2--2.5 hours. You will do a short pre-class package so that our in-person time can focus on application, practice, and problem-solving (the part you cannot get from a slide deck).
 
-\subsection*{Weekly Rhythm}
-Our weekly rhythm is intentionally consistent so you always know what to expect.
+\subsection*{Weekly Flow}
+Each week follows a consistent flow to help you manage your time and expectations.
 
 \noindent \textbf{Before class (60--90 minutes):}
 \begin{itemize}
@@ -244,7 +241,7 @@ Our weekly rhythm is intentionally consistent so you always know what to expect.
 \end{itemize}
 
 \subsection*{Three Asynchronous Work Weeks}
-Three weeks are structured asynchronous \emph{work weeks} (not ``go figure it out''). These replace in-person meetings and are designed to move your team project forward.
+Three weeks are structured asynchronous \emph{work weeks}. These replace in-person meetings and are designed to move your team project forward.
 \begin{itemize}
     \item \textbf{Week 4 (Async):} regime formation, stakeholder/power mapping, and team formation
     \item \textbf{Week 8 (Async):} group charter and governance design sprint
@@ -446,7 +443,7 @@ We will follow the schedule below as closely as possible. If we need to adjust p
         Build the map, form the team, and pick the problem.
     \subsubsection*{Readings (lighter but foundational)}
         \begin{itemize}
-            \item \citet{EmersonNabatchi2015}: Chapter 2 (skim) and Chapter 3 (recap)
+            \item \citet{EmersonNabatchi2015}: Chapter 2 and Chapter 3 
             \item \citet{OLeary2009}: Chapter 4 (partner selection)
         \end{itemize}
     \subsubsection*{Deliverables}
@@ -504,7 +501,7 @@ We will follow the schedule below as closely as possible. If we need to adjust p
             \item Pre-Class Brief 6 (due before class)
         \end{itemize}
 
-\subsection*{3/10 -- Week 8: ASYNC WORK WEEK (March)}
+\subsection*{3/10 -- Week 8: ASYNC WORK WEEK}
     \subsubsection*{Theme}
         Design sprint: turn your coalition into something you can actually govern.
     \subsubsection*{Readings}
@@ -553,7 +550,7 @@ We will follow the schedule below as closely as possible. If we need to adjust p
 \subsection*{3/31 -- Spring Break: No Class}
 Spring Break is 3/30--4/3.
 
-\subsection*{4/7 -- Week 11: Signature OC/LA Basin Simulation (Tabletop)}
+\subsection*{4/7 -- Week 11: Signature OC/LA Basin Simulation}
     \subsubsection*{In Class}
         \begin{itemize}
             \item Full simulation and structured debrief using CGR components
@@ -568,7 +565,7 @@ Spring Break is 3/30--4/3.
             \item Reflection assigned (due Week 12)
         \end{itemize}
 
-\subsection*{4/14 -- Week 12: ASYNC WORK WEEK (Late April)}
+\subsection*{4/14 -- Week 12: ASYNC WORK WEEK}
     \subsubsection*{Theme}
         Performance and accountability: show evidence that the collaboration worked.
     \subsubsection*{Readings}
@@ -603,7 +600,7 @@ Spring Break is 3/30--4/3.
 \subsection*{4/28 -- Week 14: Integration: Redesign Under Political Heat}
     \subsubsection*{In Class}
         \begin{itemize}
-            \item Rapid redesign clinic and guest speaker night (optional)
+            \item Rapid redesign clinic under new constraints and political pressures
         \end{itemize}
     \subsubsection*{Readings}
         \begin{itemize}
