it's canvas accessible.

--- a/POSC 588 Collab Gov/spring_26/POSC_588_Spring26.tex
+++ b/POSC 588 Collab Gov/spring_26/POSC_588_Spring26.tex
@@ -90,7 +90,7 @@
 \urlstyle{same}
 
 % Document title and metadata
-\title{POSC 588, \textit{Collaborative Governance}}
+\title{POSC 588, Collaborative Governance}
 \author{}
 \date{Spring 2026}
 
