points and location

--- a/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
+++ b/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
@@ -249,6 +249,7 @@ The due dates for the course requirements are as follows:
         \item Personal Reflection: Due Fridays by 11:59 p.m. (Weeks 2--9)
         \item Week 1 Alternative Assignment: Due Friday, 1/23
     \end{itemize}
+    \item \textbf{Point values (Canvas):} Annotated bibliographies = 5 points each; rough draft synthesis papers = 10 points each; final synthesis papers = 20 points each; reflections = 10 points each; concept application memo (Part A, Weeks 6 and 9) = 10 points each; decision and practice memo (Part B, Weeks 6 and 9) = 20 points each.
     \item Practice Comprehensive Exam Response:
     \begin{itemize}
         \item Distributed in Week 10 (Sunday, 3/22)
@@ -330,7 +331,7 @@ The capstone course is designed to integrate key theories and practices in publi
 Each week includes the following components:
 
 \begin{enumerate}
-    \item \textbf{Annotated Bibliography (Due Monday Before Class)}
+    \item \textbf{Annotated Bibliography (5 points; Due Monday Before Class)}
     \begin{itemize}
         \item \textbf{Purpose}: Prepare for in-class discussion by summarizing key ideas and evaluating the relevance of assigned readings.
         \item \textbf{Instructions}:
@@ -352,7 +353,7 @@ Each week includes the following components:
         \end{itemize}
     \end{itemize}
 
-    \item \textbf{Rough Draft Synthesis Paper (Due Monday Before Class)}
+    \item \textbf{Rough Draft Synthesis Paper (10 points; Due Monday Before Class)}
     \begin{itemize}
         \item \textbf{Purpose}: Develop an initial critical analysis integrating insights from the readings to facilitate in-class discussion.
         \item \textbf{Instructions}:
@@ -373,7 +374,7 @@ Each week includes the following components:
         \item \textbf{Peer Review Studio (30 minutes)}: Students work in rotating pairs to give targeted feedback using a short checklist. Each student submits two actionable suggestions and one question to Canvas by the end of class.
     \end{itemize}
 
-    \item \textbf{Final Synthesis Paper (Due Wednesday Night) and Reflection (Due Friday Night)}
+    \item \textbf{Final Synthesis Paper (20 points; Due Wednesday Night) and Reflection (10 points; Due Friday Night)}
     \begin{itemize}
         \item \textbf{Purpose}: Produce a polished critical analysis incorporating insights from class discussion.
         \item \textbf{Instructions}:
@@ -410,12 +411,12 @@ Each week includes the following components:
 For the \textit{Street-Level Bureaucracy} and \textit{Emotional Labor} weeks, students complete an alternative assignment in place of the standard synthesis paper.
 
 \begin{itemize}
-    \item \textbf{Part A: Concept Application Memo (Due Monday Before Class)}
+    \item \textbf{Part A: Concept Application Memo (10 points; Due Monday Before Class)}
     \begin{itemize}
         \item 2 pages identifying 3 core concepts from the book and applying them to a real or hypothetical public service setting.
         \item Include one explicit dilemma or tradeoff a public servant faces in that setting.
     \end{itemize}
-    \item \textbf{Part B: Decision and Practice Memo (Due Wednesday Night)}
+    \item \textbf{Part B: Decision and Practice Memo (20 points; Due Wednesday Night)}
     \begin{itemize}
         \item 3--4 pages proposing a response to the dilemma using course theory and evidence from the book.
         \item Include one paragraph on equity implications and one paragraph on implementation constraints.
