--- a/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
+++ b/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
@@ -332,67 +332,76 @@ Each week includes the following components:
 
 \begin{enumerate}
     \item \textbf{Annotated Bibliography (5 points; Due Monday Before Class)}
-    \begin{itemize}
-        \item \textbf{Purpose}: Prepare for in-class discussion by summarizing key ideas and evaluating the relevance of assigned readings.
-        \item \textbf{Instructions}:
         \begin{itemize}
-            \item For each assigned reading:
+            \item \textbf{Purpose}: Prepare for in-class discussion by summarizing key ideas and evaluating the relevance of assigned readings.
+            \item \textbf{Instructions}:
             \begin{itemize}
-                \item Provide a citation in APA or Chicago author-date style.
-                \item Write a 150-word annotation that includes:
+                \item For each assigned reading:
                 \begin{itemize}
-                    \item A brief summary of the central argument and key points.
-                    \item Relevance to the week's topic and implications for public administration.
+                    \item Provide a citation in APA or Chicago author-date style.
+                    \item Write a 150-word annotation that includes:
+                    \begin{itemize}
+                        \item A brief summary of the central argument and key points.
+                        \item Relevance to the week's topic and implications for public administration.
+                    \end{itemize}
                 \end{itemize}
+                \item \textbf{Optional AI Feedback (Weeks 2--4 Required; Week 5+ Optional)}: Students may use tools such as OpenAI's \href{https://chat.openai.com/}{ChatGPT}, Anthropic's \href{https://www.anthropic.com/}{Claude}, Google's \href{https://www.google.com/search/about/}{Gemini}, or the university's \href{https://titangpt.fullerton.edu/auth/jwt/login}{TitanGPT} to request feedback.
+                \item \textbf{Sample Prompt}:
+                \begin{quote}
+                    \texttt{``You are my writing coach for a graduate PA seminar. Please review one annotated bibliography entry. Check for accuracy of the summary, clarity of the relevance statement, and any missing concepts from the reading. Return: (1) 3 bullet critiques, (2) 1 suggestion for improvement, and (3) 1 discussion question. Do not rewrite my text.''}
+                \end{quote}
             \end{itemize}
-            \item \textbf{Optional AI Feedback (Weeks 2--4 Required; Week 5+ Optional)}: Students may use tools such as OpenAI's \href{https://chat.openai.com/}{ChatGPT}, Anthropic's \href{https://www.anthropic.com/}{Claude}, Google's \href{https://www.google.com/search/about/}{Gemini}, or the university's \href{https://titangpt.fullerton.edu/auth/jwt/login}{TitanGPT} to request feedback.
-            \item \textbf{Sample Prompt}:
-            \begin{quote}
-                \texttt{``You are my writing coach for a graduate PA seminar. Please review one annotated bibliography entry. Check for accuracy of the summary, clarity of the relevance statement, and any missing concepts from the reading. Return: (1) 3 bullet critiques, (2) 1 suggestion for improvement, and (3) 1 discussion question. Do not rewrite my text.''}
-            \end{quote}
         \end{itemize}
-    \end{itemize}
 
     \item \textbf{Rough Draft Synthesis Paper (10 points; Due Monday Before Class)}
-    \begin{itemize}
-        \item \textbf{Purpose}: Develop an initial critical analysis integrating insights from the readings to facilitate in-class discussion.
-        \item \textbf{Instructions}:
         \begin{itemize}
-            \item Write a 3-page rough draft synthesis paper that:
+            \item \textbf{Purpose}: Develop an initial critical analysis integrating insights from the readings to facilitate in-class discussion.
+            \item \textbf{Instructions}:
             \begin{itemize}
-                \item Identifies patterns, connections, and contradictions across the readings.
-                \item Highlights implications for public administration theory and practice.
+                \item Write a 3-page rough draft synthesis paper that:
+                \begin{itemize}
+                    \item Identifies patterns, connections, and contradictions across the readings.
+                    \item Highlights implications for public administration theory and practice.
+                \end{itemize}
+                \item This draft should be substantive but will be refined based on class discussion and further reflection.
             \end{itemize}
-            \item This draft should be substantive but will be refined based on class discussion and further reflection.
         \end{itemize}
-    \end{itemize}
 
     \item \textbf{In-Person Class Discussion and Peer Review Studio (Monday)}
-    \begin{itemize}
-        \item \textbf{Purpose}: Deepen understanding of the week's readings through collaborative discussion and refine synthesis thinking.
-        \item \textbf{Activity}: Analyze key themes, patterns, and contradictions in the readings; discuss insights from rough drafts.
-        \item \textbf{Peer Review Studio (30 minutes)}: Students work in rotating pairs to give targeted feedback using a short checklist. Each student submits two actionable suggestions and one question to Canvas by the end of class.
-    \end{itemize}
-
-    \item \textbf{Final Synthesis Paper (20 points; Due Wednesday Night) and Reflection (10 points; Due Friday Night)}
-    \begin{itemize}
-        \item \textbf{Purpose}: Produce a polished critical analysis incorporating insights from class discussion.
-        \item \textbf{Instructions}:
         \begin{itemize}
-            \item Write a 4- to 5-page final synthesis paper that:
-            \begin{itemize}
-                \item Refines and expands the rough draft based on class discussion.
-                \item Demonstrates sophisticated integration of readings with deeper analysis.
-                \item Connects theory to practice in public administration.
-            \end{itemize}
-            \item \textbf{AI Feedback (Required)}: Students must use an AI tool for feedback and copy/paste the AI response into the appendix of their final submission.
-            \begin{quote}
-                \texttt{``Act as a critical reviewer for my synthesis paper. Identify 3 strengths, 3 gaps in reasoning or evidence, 2 counterarguments I should address, and 2 additional connections across readings. Do not rewrite my paper or add new content.''}
-            \end{quote}
-            \item Write a brief personal reflection (250--300 words) on your learning process and insights gained from the week's work.
-            \item Include all AI feedback used during the week in an appendix.
+            \item \textbf{Purpose}: Deepen understanding of the week's readings through collaborative discussion and refine synthesis thinking.
+            \item \textbf{Activity}: Analyze key themes, patterns, and contradictions in the readings; discuss insights from rough drafts.
+            \item \textbf{Peer Review Studio (30 minutes)}: Students work in rotating pairs to give targeted feedback using a short checklist. Each student submits two actionable suggestions and one question to Canvas by the end of class.
         \end{itemize}
-    \end{itemize}
+
+    \item \textbf{Final Synthesis Paper (20 points; Due Wednesday Night)}
+        \begin{itemize}
+            \item \textbf{Purpose}: Produce a polished critical analysis incorporating insights from class discussion.
+            \item \textbf{Instructions}:
+            \begin{itemize}
+                \item Write a 4- to 5-page final synthesis paper that:
+                \begin{itemize}
+                    \item Refines and expands the rough draft based on class discussion.
+                    \item Demonstrates sophisticated integration of readings with deeper analysis.
+                    \item Connects theory to practice in public administration.
+                \end{itemize}
+                \item \textbf{AI Feedback (Required)}: Students must use an AI tool for feedback and copy/paste the AI response into an appendix attached to the final synthesis paper submission.
+                \begin{quote}
+                    \texttt{``Act as a critical reviewer for my synthesis paper. Identify 3 strengths, 3 gaps in reasoning or evidence, 2 counterarguments I should address, and 2 additional connections across readings. Do not rewrite my paper or add new content.''}
+                \end{quote}
+                \item Include all AI feedback used during the week (if any) in the appendix to the final synthesis paper.
+            \end{itemize}
+        \end{itemize}
+
+    \item \textbf{Personal Reflection (10 points; Due Friday Night)}
+        \begin{itemize}
+            \item \textbf{Purpose}: Consolidate learning and reflect on how your thinking evolved across the week's work.
+            \item \textbf{Instructions}:
+            \begin{itemize}
+                \item Write a brief personal reflection (250--300 words) on your learning process and insights gained from the week's work.
+                \item Focus on what changed in your understanding after discussion/peer review, and what you would do differently next week.
+            \end{itemize}
+        \end{itemize}
 \end{enumerate}
 
 \subsubsection*{Week 1 Alternative Assignment (MLK Week)}
@@ -458,7 +467,7 @@ For the \textit{Street-Level Bureaucracy} and \textit{Emotional Labor} weeks, st
 
 \paragraph{Week 10: Comprehensive Exam Response}
 \begin{itemize}
-    \item \textbf{In-Person Class}: Question opens on Sunday. In class we'll have a final preparation.
+    \item \textbf{Asynchronous Class}: Question opens on Monday. In class we'll have a final preparation.
     \begin{itemize}
         \item \textbf{Activities}:
         \begin{itemize}
@@ -471,7 +480,7 @@ For the \textit{Street-Level Bureaucracy} and \textit{Emotional Labor} weeks, st
         \item \textbf{Objective}: Demonstrate mastery of key themes by critically engaging with classical public administration theory, New Public Service, and New Public Management.
         \item \textbf{Requirements}:
         \begin{itemize}
-            \item Length: 1,000 words.
+            \item Length: 1,620 words maximum (approximately 5--6 pages, double-spaced).
             \item Address the provided exam question with clear argumentation and citations.
             \item Use APA or Chicago author-date citation style.
             \item Engage deeply with course readings.
@@ -542,20 +551,20 @@ This capstone project allows students to deepen their understanding of their MPA
 
 \paragraph*{Assignment Stages and Requirements:}
 \begin{enumerate}
-    \item \textbf{Topic Selection (10\% of assignment grade):}
+    \item \textbf{Topic Selection (20 points):}
     \begin{itemize}
         \item Submit a one-page proposal outlining your topic, research question, and how you will integrate \textit{The Sum of Us} into your analysis.
     \end{itemize}
-    \item \textbf{Literature Review (20\% of assignment grade):}
+    \item \textbf{Literature Review (40 points):}
     \begin{itemize}
         \item Draft a literature review that synthesizes key themes from \textit{The Sum of Us}, course readings, and additional scholarly materials.
         \item Discuss how McGhee's arguments about exclusion, equity, and shared prosperity connect to themes in your concentration area.
     \end{itemize}
-    \item \textbf{Peer Review Workshop (20\% of assignment grade):}
+    \item \textbf{Peer Review Workshop (20 points):}
     \begin{itemize}
         \item Participate in a peer review workshop to provide and receive feedback on your literature review and paper outline.
     \end{itemize}
-    \item \textbf{Final Paper (50\% of assignment grade):}
+    \item \textbf{Final Paper (100 points):}
     \begin{itemize}
         \item Submit a polished final paper that integrates feedback from earlier stages.
         \item Analyze an issue relevant to your concentration through the lens of equity and shared prosperity, connecting theoretical frameworks to practical lessons.
@@ -871,51 +880,58 @@ It is the student's responsibility to read and understand the required and impor
 
 \subsection*{Week 10, Starting 3/23: Practice Comprehensive Exam Response}
 \begin{itemize}
-    \item \textbf{In-person Session}: Distribution and discussion of practice comprehensive exam
+    \item \textbf{Asynchronous Session}: Distribution and discussion of practice comprehensive exam
     \begin{itemize}
         \item Review key theoretical frameworks in public administration
         \item Discuss strategies for integrating course materials into a comprehensive argument
         \item Outline approaches to time management and exam writing
     \end{itemize}
     \item \textbf{Readings}: Revisit core course texts; review prior synthesis papers
-    \item \textbf{Monday (3/23)}: Class Discussion on practice exam prompt
-    \item \textbf{Due Saturday (3/28)}: Practice Comprehensive Exam Essay
+    \item \textbf{Monday (3/23)}: Exam distributed
+    \item \textbf{Due Friday (3/27)}: Practice Comprehensive Exam Essay
 \end{itemize}
 
-\subsection*{Week 11, Starting 3/30: Spring Break}
+\subsection*{Week X, Starting 3/30: Spring Break}
 \begin{itemize}
     \item \textbf{No Class}: Spring Break
 \end{itemize}
 
-\subsection*{Week 12, Starting 4/6: Comprehensive General Area Essay Exam}
+\subsection*{Week 11, Starting 4/6: Comprehensive General Area Essay Exam}
 \begin{itemize}
-    \item \textbf{In-person Session}: Comprehensive exam launch and Q\&A
-    \item \textbf{Comprehensive General Area Exam distributed Friday (4/10) at 8:00 a.m.}
+    \item \textbf{Asynchronous Session}: Comprehensive exam launch 
+    \item \textbf{Comprehensive General Area Exam distributed Monday (4/6) at 7:00 p.m.}
+    \item \textbf{Exam due Monday (4/13) by 4:59 p.m.}
 \end{itemize}
 
-\subsection*{Week 13, Starting 4/13: Comprehensive General Area Essay Exam}
+\subsection*{Week 12, Starting 4/13: Concentration Area Paper}
 \begin{itemize}
     \item \textbf{Asynchronous Session}: No class meeting
-    \item \textbf{Comprehensive General Area Exam due Thursday (4/16) by 4:59 p.m.}
+    \item \textbf{Read}: \citet{mcghee2021}, \emph{The Sum of Us: What Racism Costs Everyone and How We Can Prosper Together}
 \end{itemize}
 
-\subsection*{Week 14, Starting 4/20: Concentration Area Paper}
+\subsection*{Week 13, Starting 4/20: Concentration Area Paper}
 \begin{itemize}
     \item \textbf{Asynchronous Session}: Concentration Area Paper
     \item Paper expectations and guidelines
     \item Due: Topic Selection
 \end{itemize}
 
-\subsection*{Week 15, Starting 4/27: Concentration Area Paper}
-\begin{itemize}
-    \item \textbf{In-Person Session}: Concentration Area Paper Workshop
-    \item \textbf{Due Sunday (5/3)}: Literature Review Draft
-\end{itemize}
-
-\subsection*{Week 16, Starting 5/4: Concentration Area Paper}
+\subsection*{Week 14, Starting 4/27: Concentration Area Paper}
 \begin{itemize}
     \item \textbf{Asynchronous Session}: Concentration Area Paper
-    \item \textbf{Due: Final Draft on Tuesday (5/5) by 9:00 p.m.}
+    \item \textbf{Due Monday (5/4)}: Literature Review Draft
+\end{itemize}
+
+\subsection*{Week 15, Starting 5/4: Concentration Area Paper}
+\begin{itemize}
+    \item \textbf{In-Person Session}: Concentration Area Paper Workshop
+    \item Peer review and feedback session
+\end{itemize}
+
+\subsection*{Week 16, Starting 5/11: Concentration Area Paper}
+\begin{itemize}
+    \item \textbf{Asynchronous Session}: Final Concentration Area Paper Submission
+    \item \textbf{Due Monday (5/11)}: Final Concentration Area Paper
 \end{itemize}
 
 
