final touches. production version

--- a/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
+++ b/POSC 521 MPA Capstone/2025-26 Spring/posc521_2026_spring.tex
@@ -8,7 +8,7 @@
 }
 
 % Document class and font size
-\documentclass[12pt]{article}     % Standard article class with 12pt font size
+\documentclass[11pt]{article}     % Standard article class with 12pt font size
 
 % Language settings
 \usepackage[american]{babel}      % Set language to American English
@@ -240,34 +240,33 @@ This course meets in person on Mondays. Some weeks include asynchronous or indep
 \noindent \textbf{b. Required Course Assignments:}
 
 The due dates for the course requirements are as follows:
-\begin{itemize}
+\begin{enumerate}
     \item Weekly Readings Assignments:
-    \begin{itemize}
-        \item Annotated Bibliography: Due Mondays by class time (Weeks 2--9)
-        \item Rough Draft Synthesis Paper: Due Mondays by class time (Weeks 2--9)
-        \item Final Synthesis Paper or Book Alternative: Due Wednesdays by 11:59 p.m. (Weeks 2--9)
-        \item Personal Reflection: Due Fridays by 11:59 p.m. (Weeks 2--9)
-        \item Week 1 Alternative Assignment: Due Friday, 1/23
-    \end{itemize}
-    \item \textbf{Point values (Canvas):} Annotated bibliographies = 5 points each; rough draft synthesis papers = 10 points each; final synthesis papers = 20 points each; reflections = 10 points each; concept application memo (Part A, Weeks 6 and 9) = 10 points each; decision and practice memo (Part B, Weeks 6 and 9) = 20 points each.
+        \begin{itemize}
+            \item Annotated Bibliography (5 points each): Due Mondays by class time (Weeks 2--9)
+            \item Rough Draft Synthesis Paper (10 points each): Due Mondays by class time (Weeks 2--9)
+            \item Final Synthesis Paper or Book Alternative (20 points each): Due Wednesdays by 11:59 p.m. (Weeks 2--9)
+            \item Personal Reflection (10 points each): Due Fridays by 11:59 p.m. (Weeks 2--9)
+            \item Week 1 Alternative Assignment (10 points): Due Friday, 1/23 by 11:59 p.m.
+        \end{itemize}
     \item Practice Comprehensive Exam Response:
-    \begin{itemize}
-        \item Distributed in Week 10 (Sunday, 3/22)
-        \item Due on Saturday, 3/28 by 11:59 p.m.
-    \end{itemize}
+        \begin{itemize}
+            \item Distributed Monday, 3/23
+            \item Due Friday, 3/27 by 11:59 p.m.
+        \end{itemize}
     \item MPA Comprehensive General Area Essay Exam:
-    \begin{itemize}
-        \item Distributed on Friday, 4/10 at 8:00 a.m.
-        \item Due on Thursday, 4/16 by 4:59 p.m.
-    \end{itemize}
+        \begin{itemize}
+            \item Distributed Monday, 4/6 at 7:00 p.m.
+            \item Due Monday, 4/13 by 4:59 p.m.
+        \end{itemize}
     \item Concentration Area Paper:
-    \begin{itemize}
-        \item Topic Selection: Due Week 14 (Sunday, 4/19)
-        \item Literature Review Draft: Due Week 15 (Sunday, 5/3)
-        \item Workshop Participation: Week 15 (Monday, 4/27)
-        \item Final Draft: Due Tuesday, 5/5 by 9:00 p.m.
-    \end{itemize}
-\end{itemize}
+        \begin{itemize}
+            \item Topic Selection: Due Week 13 (week of 4/20; see schedule)
+            \item Literature Review Draft: Due Monday, 5/4
+            \item Workshop Participation: Week 15 (in-person Monday, 5/4)
+            \item Final Paper: Due Monday, 5/11
+        \end{itemize}
+\end{enumerate}
 
 \begin{center}
 \begin{table}[h]
@@ -296,7 +295,7 @@ Students are expected to attend all in-person sessions. If you are unable to att
 
 \vspace{1em}
 \noindent \textbf{d. Examination dates:}
-Practice comprehensive exam due Saturday, 3/28. Comprehensive general area essay exam due Thursday, 4/16.
+Practice comprehensive exam due Friday, 3/27. Comprehensive general area essay exam due Monday, 4/13 by 4:59 p.m.
 
 \vspace{1em}
 \noindent \textbf{e. Make-up and late submission policy:}
@@ -318,7 +317,7 @@ Students are responsible for retaining copies of all assignments submitted in th
 
 \subsection*{1) Weekly Readings Assignment}
 
-\textbf{Important Note:} Beginning in Week 2, all students are required to include copies of their AI feedback as an \emph{appendix} to their final weekly submission. AI feedback is:
+\textbf{Important Note:} Beginning in Week 2, all students are required to include copies of their feedback (AI or approved alternative) as an \emph{appendix} to their final weekly submission. Feedback is:
 \begin{itemize}
     \item \textbf{Required} for final synthesis papers every week.
     \item \textbf{Optional} for annotated bibliographies after Week 4.
@@ -345,7 +344,7 @@ Each week includes the following components:
                         \item Relevance to the week's topic and implications for public administration.
                     \end{itemize}
                 \end{itemize}
-                \item \textbf{Optional AI Feedback (Weeks 2--4 Required; Week 5+ Optional)}: Students may use tools such as OpenAI's \href{https://chat.openai.com/}{ChatGPT}, Anthropic's \href{https://www.anthropic.com/}{Claude}, Google's \href{https://www.google.com/search/about/}{Gemini}, or the university's \href{https://titangpt.fullerton.edu/auth/jwt/login}{TitanGPT} to request feedback.
+                \item \textbf{Feedback Appendix (Weeks 2--4 Required; Week 5+ Optional)}: Students may use tools such as OpenAI's \href{https://chat.openai.com/}{ChatGPT}, Anthropic's \href{https://www.anthropic.com/}{Claude}, Google's \href{https://www.google.com/search/about/}{Gemini}, or the university's \href{https://titangpt.fullerton.edu/auth/jwt/login}{TitanGPT} to request feedback. If you prefer not to use AI, request an alternative (e.g., peer feedback or a structured self-critique) and include that in the appendix.
                 \item \textbf{Sample Prompt}:
                 \begin{quote}
                     \texttt{``You are my writing coach for a graduate PA seminar. Please review one annotated bibliography entry. Check for accuracy of the summary, clarity of the relevance statement, and any missing concepts from the reading. Return: (1) 3 bullet critiques, (2) 1 suggestion for improvement, and (3) 1 discussion question. Do not rewrite my text.''}
@@ -385,11 +384,11 @@ Each week includes the following components:
                     \item Demonstrates sophisticated integration of readings with deeper analysis.
                     \item Connects theory to practice in public administration.
                 \end{itemize}
-                \item \textbf{AI Feedback (Required)}: Students must use an AI tool for feedback and copy/paste the AI response into an appendix attached to the final synthesis paper submission.
+                \item \textbf{Feedback Appendix (Required)}: Students must include feedback in an appendix attached to the final synthesis paper submission. AI feedback is recommended; approved alternatives (peer feedback or structured self-critique) are acceptable with prior notice.
                 \begin{quote}
                     \texttt{``Act as a critical reviewer for my synthesis paper. Identify 3 strengths, 3 gaps in reasoning or evidence, 2 counterarguments I should address, and 2 additional connections across readings. Do not rewrite my paper or add new content.''}
                 \end{quote}
-                \item Include all AI feedback used during the week (if any) in the appendix to the final synthesis paper.
+                \item Include all feedback used during the week (AI or other) in the appendix to the final synthesis paper.
             \end{itemize}
         \end{itemize}
 
@@ -434,13 +433,13 @@ For the \textit{Street-Level Bureaucracy} and \textit{Emotional Labor} weeks, st
     \begin{itemize}
         \item 250--300 words on how the book reshaped your view of frontline public service or emotional labor.
     \end{itemize}
-    \item \textbf{AI Feedback (Required)}: Use an AI tool for critique on Part B and include the response in your appendix.
+    \item \textbf{Feedback Appendix (Required)}: Use an AI tool for critique on Part B and include the response in your appendix. If you prefer not to use AI, request an alternative (peer feedback or structured self-critique) and include that in the appendix.
     \begin{quote}
         \texttt{``Review my decision and practice memo for clarity, feasibility, and use of evidence. Identify 2 strengths, 2 weak spots, and 1 alternative approach I should consider. Do not rewrite the memo.''}
     \end{quote}
 \end{itemize}
 
-\paragraph*{AI Use and Academic Integrity:} AI may be used to provide feedback, raise questions, or suggest additional angles for analysis. It may \textbf{not} be used to draft or rewrite your work. All writing must remain your own. Please read the \textbf{Policy on the Use of Generative AI and Other Technology} section of this syllabus for more details on how to use AI responsibly in this course and refer to Table \ref{tab:ai-guidelines} and the more detailed guidelines provided below.
+\paragraph*{AI Use and Academic Integrity:} AI may be used to provide feedback, raise questions, or suggest additional angles for analysis. It may \textbf{not} be used to draft or rewrite your work. All writing must remain your own. Do not input confidential or sensitive data into AI tools. Please read the \textbf{Policy on the Use of Generative AI and Other Technology} section of this syllabus for more details on how to use AI responsibly in this course and refer to Table \ref{tab:ai-guidelines} and the more detailed guidelines provided below.
 
 \begin{center}
 \begin{table}[h]
@@ -467,7 +466,7 @@ For the \textit{Street-Level Bureaucracy} and \textit{Emotional Labor} weeks, st
 
 \paragraph{Week 10: Comprehensive Exam Response}
 \begin{itemize}
-    \item \textbf{Asynchronous Class}: Question opens on Monday. In class we'll have a final preparation.
+    \item \textbf{Asynchronous Class}: Question opens on Monday. Students work independently throughout the week.
     \begin{itemize}
         \item \textbf{Activities}:
         \begin{itemize}
@@ -480,18 +479,18 @@ For the \textit{Street-Level Bureaucracy} and \textit{Emotional Labor} weeks, st
         \item \textbf{Objective}: Demonstrate mastery of key themes by critically engaging with classical public administration theory, New Public Service, and New Public Management.
         \item \textbf{Requirements}:
         \begin{itemize}
-            \item Length: 1,620 words maximum (approximately 5--6 pages, double-spaced).
+            \item Length: 810 words maximum (approximately 3--4 pages, double-spaced).
             \item Address the provided exam question with clear argumentation and citations.
             \item Use APA or Chicago author-date citation style.
             \item Engage deeply with course readings.
         \end{itemize}
-        \item \textbf{Assignment}: Final Exam Response Submission (due Saturday night).
+        \item \textbf{Assignment}: Final Exam Response Submission (due Friday night).
     \end{itemize}
 \end{itemize}
 
 \subsection*{3) Reading Discussion Facilitation}
 
-Students will facilitate class discussions in pairs for Weeks 2 through 9 (skipping Week 1). With 9 students, most weeks will have facilitator pairs, with one week requiring a group of three. Facilitators will lead integrated discussions that build on their collaborative preparation and the rough draft synthesis papers submitted prior to class, creating a dynamic learning environment that bridges individual preparation with collaborative analysis.
+Students will facilitate class discussions in pairs for Weeks 3 through 9 (skipping Weeks 1 and 2). With 14 students, there will be 7 pairs, each responsible for leading a 45-minute discussion segment during one of the weeks. Facilitators will lead integrated discussions that build on their collaborative preparation and the rough draft synthesis papers submitted prior to class, creating a dynamic learning environment that bridges individual preparation with collaborative analysis.
 
 \subsubsection*{Facilitator Responsibilities}
 
@@ -568,7 +567,7 @@ This capstone project allows students to deepen their understanding of their MPA
     \begin{itemize}
         \item Submit a polished final paper that integrates feedback from earlier stages.
         \item Analyze an issue relevant to your concentration through the lens of equity and shared prosperity, connecting theoretical frameworks to practical lessons.
-        \item Ensure the paper is 9--12 pages (excluding references), double-spaced, and formatted in APA or Chicago author-date style.
+        \item Ensure the paper is 8--10 pages (excluding references), double-spaced, and formatted in APA or Chicago author-date style.
     \end{itemize}
 \end{enumerate}
 
@@ -583,7 +582,7 @@ This capstone project allows students to deepen their understanding of their MPA
 \paragraph*{General Guidelines:}
 \begin{itemize}
     \item \textbf{Grounding:} Papers must be firmly rooted in \textit{The Sum of Us} and assigned concentration literature, demonstrating a deep understanding of both. Students may also incorporate relevant literature from the capstone or other MPA courses.
-    \item \textbf{Length:} 9--12 pages, double-spaced (excluding references).
+    \item \textbf{Length:} 8--10 pages, double-spaced (excluding references).
     \item \textbf{Formatting:} Use 12-point Times New Roman font with 1-inch margins. APA or Chicago author-date citation style is required.
     \item \textbf{Citations:} Provide in-text citations and a comprehensive references page.
     \item \textbf{Structure:} Organize the paper with a clear introduction, body, and conclusion. Use descriptive headings to guide the reader.
@@ -632,7 +631,7 @@ AI is permitted and encouraged as a learning tool, under the following guideline
     \item \textbf{Allowed}: Using AI for feedback on annotated bibliographies, synthesis drafts, and reflections (see assignments for sample prompts).
     \item \textbf{Allowed}: Using AI to brainstorm questions, highlight gaps, or check clarity and organization.
     \item \textbf{Not Allowed}: Submitting AI-generated text as your own work or asking AI to rewrite your assignments.
-    \item \textbf{Optional}: Students may choose whether or not to use AI tools for any assignment in this course. All work can be completed successfully without AI assistance. This optional approach applies to all course requirements, regardless of specific AI-related instructions in individual assignments.
+    \item \textbf{Required in specific assignments}: Where a feedback appendix is required, include AI feedback or an approved alternative (peer feedback or structured self-critique).
 \end{itemize}
 
 \subsubsection*{Rationale for AI Policy}
@@ -655,6 +654,8 @@ This policy is designed to ensure AI use strengthens---not substitutes---your ac
     \item \textbf{Authorship}: All substantive writing must be your own. AI may provide critique, but not draft or rewrite.
     \item \textbf{Citation}: When AI meaningfully informs your work, cite it (e.g., ``ChatGPT (GPT-5) [AI model], feedback received [date]'').
     \item \textbf{Bias Awareness}: AI outputs reflect biases. Evaluate them critically for fairness and accuracy.
+    \item \textbf{Verification}: Validate AI-suggested facts or sources before using them in your work.
+    \item \textbf{Confidentiality}: Do not upload sensitive, private, or proprietary information into AI tools.
     \item \textbf{Sustainability}: Be mindful of AI's environmental footprint and use tools thoughtfully.
 \end{itemize}
 
@@ -673,7 +674,7 @@ AI use will be assessed not by how often you use it, but by how thoughtfully you
     \item Evidence of revision and improvement based on AI or peer feedback.
     \item Student reflections on the usefulness and limitations of AI.
     \item Quality of class participation, showing independent engagement with readings and theory.
-    \item Final projects that demonstrate original critical thinking, even if AI supported the drafting process.
+    \item Final projects that demonstrate original critical thinking, even if AI-supported feedback informed revisions.
 \end{itemize}
 
 \noindent The goal is to treat AI as a \textit{feedback partner}---a tool to sharpen your analysis, deepen your questions, and strengthen your voice in public administration.
